--- a/Backend/package.json
+++ b/Backend/package.json
@@ -34,7 +34,9 @@
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.0",
+    "@types/node-fetch": "^2.6.13",
     "@types/passport-google-oauth20": "^2.0.16",
+    "node-fetch": "^3.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
