--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -4,14 +4,16 @@
     {
       "path": "./tsconfig.app.json"
     },
-    {
-      "path": "./tsconfig.node.json"
-    }
+    // {
+    //   "path": "./tsconfig.node.json"
+    // }
   ],
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["src/**/*.ts", "src/**/*.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
