--- a/Frontend/tsconfig.node.json
+++ b/Frontend/tsconfig.node.json
@@ -26,6 +26,6 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", "vite.config.ts", "vitest.config.ts"],
+  // "references": [{ "path": "./tsconfig.json" }]
 }
