--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --build && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --build --dry"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
