--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -8,7 +8,6 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -17,7 +16,7 @@
     /* Project References */
     "composite": true,
     "declaration": true,
-    "outDir": "./dist",
+    "emitDeclarationOnly": true,
 
     /* Linting */
     "strict": true,
