--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -8,6 +8,7 @@
 
     /* Bundler mode */
     "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -16,7 +17,7 @@
     /* Project References */
     "composite": true,
     "declaration": true,
-    "emitDeclarationOnly": true,
+    "outDir": "./dist",
 
     /* Linting */
     "strict": true,
