--- a/Frontend/tsconfig.node.json
+++ b/Frontend/tsconfig.node.json
@@ -6,14 +6,11 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
-    /* Bundler mode */
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    /* Node-specific */
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
@@ -26,6 +23,5 @@
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src", "vite.config.ts", "vitest.config.ts"],
-  // "references": [{ "path": "./tsconfig.json" }]
+  "include": ["vite.config.ts", "vitest.config.ts"]
 }
