--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,31 +13,26 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-session": "^1.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
-  },
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.9",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/express-session": "^1.18.2",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.2.0",
-    "@types/node-fetch": "^2.6.13",
-    "@types/passport-google-oauth20": "^2.0.16",
-    "node-fetch": "^3.3.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
-  }
+  "express": "^5.1.0",
+  "passport": "^0.7.0",
+  "passport-google-oauth20": "^2.0.0",
+  "cors": "^2.8.5",
+  "express-session": "^1.18.2",
+  "cookie-parser": "^1.4.7",
+  "jsonwebtoken": "^9.0.2",
+  "node-fetch": "^3.3.2",
+  "@types/express": "^5.0.3",
+  "@types/passport": "^0.7.10",
+  "@types/passport-google-oauth20": "^2.0.16",
+  "@types/cors": "^2.8.19",
+  "@types/express-session": "^1.18.2",
+  "@types/cookie-parser": "^1.4.9",
+  "@types/jsonwebtoken": "^9.0.10",
+  "@types/node-fetch": "^2.6.13",
+  "@types/node": "^24.2.0",
+  "bcrypt": "^6.0.0",
+  "bcryptjs": "^3.0.2",
+  "dotenv": "^17.2.1",
+  "mongoose": "^8.17.0"
+}
 }
