--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,7 +29,8 @@
     "react-use-measure": "^2.1.7",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
