feat: Add Stress Level Chart component and integrate stress tracking features
- Implemented StressLevelChart component to visualize stress levels over the last 7 days.
- Enhanced stress logging to include today's stress level if available.
- Added average stress calculation and stress distribution visualization.
- Improved UI with responsive design and better styling for charts and legends.

feat: Create Breathing Timer component for guided breathing exercises

- Developed BreathingTimer component with countdown functionality and breathing phases.
- Integrated timer controls for pause, reset, and exit.
- Added animated background to enhance user experience during breathing exercises.

feat: Implement Stress tracking page with insights and statistics

- Created Stress component to track and display user stress levels.
- Added functionality to save and update current stress levels.
- Implemented weekly overview with average stress, best and worst days, and trend analysis.
- Included AI insights and quick relief techniques for stress management.

--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -27,8 +27,14 @@
     /* Additional */
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    
+    /* ✅ Path Mapping + Silence Deprecation (use 6.0 as error says) */
+    "ignoreDeprecations": "6.0",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src", "src/types"],
-  // "exclude": ["**/*.d.ts"]
+  "include": ["src", "src/types"]
 }
