--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -6,10 +6,10 @@
     }
   ],
   "compilerOptions": {
-    "baseUrl": ".",
+    "ignoreDeprecations": "6.0",
+    "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     }
   }
-  
 }
