--- a/Frontend/tsconfig.app.json
+++ b/Frontend/tsconfig.app.json
@@ -28,13 +28,13 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    
-    /* ✅ Path Mapping + Silence Deprecation (use 6.0 as error says) */
     "ignoreDeprecations": "6.0",
+    
+    /* Path Mapping - ✅ KEEP ONLY THESE */
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
   },
   "include": ["src", "src/types"]
 }
