--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,26 +10,40 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "cors": "^2.8.5",
-    "express-session": "^1.18.2",
-    "cookie-parser": "^1.4.7",
-    "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
-    "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
-    "mongoose": "^8.17.0",
+    "@google/generative-ai": "^0.24.1",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-rate-limit": "^5.1.3",
+    "@types/express-session": "^1.17.6",
+    "@types/helmet": "^0.0.48",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^24.2.0",
+    "@types/node-fetch": "^2.6.2",
     "@types/passport": "^1.0.9",
     "@types/passport-google-oauth20": "^2.0.16",
-    "@types/cors": "^2.8.17",
-    "@types/express-session": "^1.17.6",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node-fetch": "^2.6.2",
-    "@types/node": "^24.2.0"
+    "@types/socket.io": "^3.0.1",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "chalk": "^4.1.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "express-session": "^1.18.2",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.0",
+    "node-fetch": "^3.3.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1",
+    "winston": "^3.18.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
   }
 }
