--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,25 +1,18 @@
 {
   "compilerOptions": {
-    // File Layout
     "rootDir": "src",
     "outDir": "dist",
-
-    // Environment Settings
     "module": "Node16",
     "target": "ES2022",
     "lib": ["ESNext"],
-    "types": ["node"],
-
-    // Other Outputs
+    // Remove or comment out this line:
+    // "types": ["node"],
+    
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
-
-    // Stricter Typechecking Options
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-
-    // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
     "isolatedModules": true,
@@ -28,7 +21,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "moduleResolution": "Node16"
+    "moduleResolution": "Node16",
+    "typeRoots": ["./src/@types", "./node_modules/@types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
