--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,8 @@
     "type-check": "tsc --build --dry"
   },
   "dependencies": {
+    "@google/genai": "^1.25.0",
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/dotenv": "^6.1.1",
     "@types/tailwindcss": "^3.0.11",
@@ -18,6 +20,7 @@
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.537.0",
     "motion": "^12.23.12",
@@ -25,9 +28,11 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.1",
     "react-use-measure": "^2.1.7",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
@@ -36,7 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/chart.js": "^2.9.41",
-    "@types/node": "^24.2.0",
+    "@types/node": "^24.8.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@types/react-router-dom": "^5.3.3",
